--- a/src/main/resources/templates/usr/challenge/postdetail.html
+++ b/src/main/resources/templates/usr/challenge/postdetail.html
@@ -81,7 +81,6 @@
                     </div>
                 </th:block>
 
-
                 <th:if th:unless="${@rq.member.loginID}==${post.creatorId}">
                     <div class="pr-4 flex flex-row justify-end">
                         <button th:attr="onclick='wantReport(\'' + ${post.id} + '\', \'' + ${@rq.member.loginID} + '\', \'' + ${post.creatorId} + '\')'">
@@ -90,33 +89,40 @@
                     </div>
                 </th:if>
 
-
-
                 <div class="divider"></div>
+                <div class="my-2" th:each="comment:${commentList}" th:unless="${#lists.isEmpty(commentList) or commentList == null}">
+                    <div th:unless ="${#strings.equals(comment.challengeMember.challenger.id, @rq.member.id)}" class="chat chat-start">
+                        <div class="chat-image avatar">
+                            <div class="w-10 rounded-full">
+                                <img src="/images/stock/photo-1534528741775-53994a69daeb.jpg" />
+                            </div>
+                        </div>
+                        <div th:text ="${comment.challengeMember.challenger.nickname}" class="chat-header">
+                            Obi-Wan Kenobi
+                            <time class="text-xs opacity-50" th:text="${#temporals.format(comment.createDate, 'yy.MM.dd HH:mm')}">12:45</time>
+                        </div>
+                        <div class="chat-bubble" th:text="${comment.commentContent}">You were the Chosen One!</div>
 
-                <div class="my-2">
-                    <span class="badge badge-md my-3 mx-10">댓글</span>
-                    <!-- FIXME 추후 댓글 구현? -->
-
-                    <div class="chat chat-start">
-                        <div class="chat-bubble chat-bubble-accent text-lg font-md mx-3">ex) 우와 참 열심히 하셨네요</div>
                     </div>
-
-                    <div class="chat chat-end">
-                        <div class="chat-bubble chat-bubble-accent text-lg font-md mx-3">ex) 추천 드립니다 b</div>
-                    </div>
-
-                    <div class="chat chat-start">
-                        <div class="chat-bubble chat-bubble-accent text-lg font-md mx-3">ex) 저도 열심히 해야되는데...</div>
-                    </div>
-
-                    <div class="flex flex-row justify-center">
-                        <input type="text" placeholder="댓글을 달아보세요!" class="my-3 mx-4 input input-bordered input-accent w-full max-w-xs" />
-                        <button type="submit" class="mx-1 btn btn-accent btn-outline disabled">
-                            <i class="fas fa-paper-plane" style="color: #000000"></i>
-                        </button>
+                    <div th:if ="${#strings.equals(comment.challengeMember.challenger.id, @rq.member.id)}" class="chat chat-end">
+                        <div class="chat-image avatar">
+                            <div class="w-10 rounded-full">
+                                <img src="/images/stock/photo-1534528741775-53994a69daeb.jpg" />
+                            </div>
+                        </div>
+                        <div th:text ="${comment.challengeMember.challenger.nickname}" class="chat-header">
+                            Anakin
+                            <time class="text-xs opacity-50" th:text="${#temporals.format(comment.createDate, 'yy.MM.dd HH:mm')}" >12:46</time>
+                        </div>
+                        <div class="chat-bubble" th:text="${comment.commentContent}">I hate you!</div>
                     </div>
                 </div>
+                <form class="flex flex-row justify-center" method="post" th:action="'/usr/challenge/comment/write/'+${linkedChallenge.id}">
+                    <input type="text" name ="contents" placeholder="댓글을 달아보세요!" class="my-3 mx-4 input input-bordered input-accent w-full max-w-xs" />
+                    <button type="submit" class="mx-1 btn btn-accent btn-outline disabled">
+                        <i class="fas fa-paper-plane" style="color: #000000"></i>
+                    </button>
+                </form>
             </div>
         </div>
     </div>
